// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-time-line Renders \`alarms-time-line\` with isHtmlEnabled 1`] = `
<div
  class="timeline"
>
  <div
    class="alarms-timeline-steps"
  >
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          13/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:54:22
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
          style="display: none;"
        >
          <div
            class="date"
          >
          13/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:54:22
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          30/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          12:46:25
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          27/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:17:21
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
          style="display: none;"
        >
          <div
            class="date"
          >
          27/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:47:33
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          30/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          6:54:10
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          18/10/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          12:35:10
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            ishtmlenabled="true"
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
  </div>
  <c-pagination-stub
    limit="10"
    page="1"
    total="7"
  />
</div>
`;

exports[`alarms-time-line Renders \`alarms-time-line\` with required props 1`] = `
<div
  class="timeline"
>
  <div
    class="alarms-timeline-steps"
  >
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          13/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:54:22
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
          style="display: none;"
        >
          <div
            class="date"
          >
          13/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:54:22
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          30/07/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          12:46:25
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          27/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:17:21
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
          style="display: none;"
        >
          <div
            class="date"
          >
          27/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          8:47:33
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          30/09/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          6:54:10
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
    <ul>
      <li>
        <div
          class="alarms-timeline-steps-date text--disabled"
        >
          <div
            class="date"
          >
          18/10/2021
          </div>
        </div>
        <div
          class="alarms-timeline-steps-card"
        >
          <div
            class="time text--disabled"
          >
          12:35:10
          </div>
          <alarms-time-line-flag-stub
            class="flag"
            step="[object Object]"
          />
          <alarms-time-line-card-stub
            step="[object Object]"
          />
        </div>
      </li>
    </ul>
  </div>
  <c-pagination-stub
    limit="10"
    page="1"
    total="7"
  />
</div>
`;
